terraform/workshops/001-refactor-series/the-standard/virtual_networks.tf
resource "azurerm_virtual_network" "workload" {
  name                = "vn-${var.workload_name}-net"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}
